Commit 2: Application Enhancement